# redroid-modules-standalone

./: .gitattributes  .gitignore  99-redroid.rules  CHANGELOG.md  Makefile  NOTICE  README.md  load_modules.sh  redroid.conf
.github/: kernel-versions.json
.github/autopatch/: kernel-regression-24329526681.md
.github/scripts/: check-compat.sh  check-kernels.sh  dkms-package.sh
.github/workflows/: analyze.yml  (+13 more)
LICENSES/: THIRD_PARTY.md
ashmem/: Makefile  ashmem.c  compat.h  deps.c  deps.h  dkms.conf  dkms_post_build.sh  dkms_pre_build.sh
binder/: Makefile  binder.c  binder_alloc.c  binder_alloc.h  binder_internal.h  binderfs.c  compat.h  deps.c  dkms.conf  dkms_post_build.sh  dkms_pre_build.sh
docs/: BUILD.md  KERNEL_COMPAT.md  PLANNED_CHANGES.md  RELEASE_BUNDLE_LAYOUT.md  REPOSITORY_STRUCTURE.md  design.md  ipcverify.md  release_bundle.md  versioning.md
ipcverify/: CMakeLists.txt  Makefile  build-android.sh  settings.gradle
ipcverify/app/: build.gradle
ipcverify/app/src/main/: AndroidManifest.xml
ipcverify/app/src/main/cpp/: android_bridge.c
ipcverify/app/src/main/java/com/kryxan/ipcverify/: HeadlessCheckActivity.java  MainActivity.java  NativeBridge.java
ipcverify/app/src/main/res/layout/: activity_main.xml
ipcverify/app/src/main/res/values/: strings.xml
ipcverify/src/: host_main.c  ipc_checks.c  ipc_checks.h
scripts/: build-release-bundle.sh  bump-version.sh  create-support-bundle.sh  detect-ipc-runtime.sh  prepare-kernel-autopatch.sh  read-version.sh  validate-version.sh  verify-environment.sh
test/: Makefile  ashmem_test.c  test_ipc.c
(+10 files in other folders)
